Linked proxies "lost data" #52481

Closed
opened 2017-08-21 16:19:28 +02:00 by Andy Bay · 11 comments

There seems to be a problem in Blender in which linked proxy objects start to "lose data".

There is a simple way to test this behavior:

  1. Create a new empty blender scene

  2. Link an object to it (suzanne will do fine)

  3. Make the object a proxy

  4. Choose "make local" --> "all"

  5. Attempt to go to edit mode (won't work)

  6. Save the file and reload it (blender will give a console error with "lost data" and the proxy object disappears)

Here is a video of the problem:

https://youtu.be/iaWOj72dc0Q

This seems to happen with both 2.78 and 2.79

EDIT:

A smaller file: link problem.zip

There seems to be a problem in Blender in which linked proxy objects start to "lose data". There is a simple way to test this behavior: 1. Create a new empty blender scene 2. Link an object to it (suzanne will do fine) 3. Make the object a proxy 4. Choose "make local" --> "all" 5. Attempt to go to edit mode (won't work) 6. Save the file and reload it (blender will give a console error with "lost data" and the proxy object disappears) Here is a video of the problem: https://youtu.be/iaWOj72dc0Q This seems to happen with both 2.78 and 2.79 EDIT: A smaller file: [link problem.zip](https://archive.blender.org/developer/F720752/link_problem.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Geminoidi

Added subscriber: @Geminoidi

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a small and simple .blend file (not a 96MB zipped archive…) to help reproducing the issue, always saves us a tremendous of time.

Please always attach a **small and simple** .blend file (not a 96MB zipped archive…) to help reproducing the issue, always saves us a tremendous of time.
Author

In #52481#453627, @mont29 wrote:
Please always attach a small and simple .blend file (not a 96MB zipped archive…) to help reproducing the issue, always saves us a tremendous of time.

Hi! Sorry about that! You can freely ignore the file, because the problem can also be easily recreated with the six steps I posted.

EDIT: I uploaded a smaller zip now

> In #52481#453627, @mont29 wrote: > Please always attach a **small and simple** .blend file (not a 96MB zipped archive…) to help reproducing the issue, always saves us a tremendous of time. Hi! Sorry about that! You can freely ignore the file, because the problem can also be easily recreated with the six steps I posted. EDIT: I uploaded a smaller zip now

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Author

I'm not so familiar with the bug tracker so please forgive for asking: what does it mean that the status of this is "incomplete"? Are you still waiting for additional input from me?

I'm not so familiar with the bug tracker so please forgive for asking: what does it mean that the status of this is "incomplete"? Are you still waiting for additional input from me?
Bastien Montagne self-assigned this 2017-08-25 12:55:06 +02:00

Sorry, just means none of the devs had time to check again on it ;)

So, what happens here I think is that "making all local" also makes linked mesh data local, and remaps the proxy to use that data. However, a proxy's obdata is ignored at save time, so that localized mesh end up having no user and be discarded, so when opening again proxy data points to inexistent obdata…

Think proxies shall never use local obdata, will see what I can do in localizing process to forbid this to happen.

Sorry, just means none of the devs had time to check again on it ;) So, what happens here I think is that "making all local" also makes linked mesh data local, and remaps the proxy to use that data. However, a proxy's obdata is ignored at save time, so that localized mesh end up having no user and be discarded, so when opening again proxy data points to inexistent obdata… Think proxies shall never use local obdata, will see what I can do in localizing process to forbid this to happen.
Author

Does this mean that it's impossible to make linked proxy objects local? Is the only way forward to re-import everything by appending instead of linking? Or can I still salvage my scene somehow?

Does this mean that it's impossible to make linked proxy objects local? Is the only way forward to re-import everything by appending instead of linking? Or can I still salvage my scene somehow?

This issue was referenced by e2ffad7823

This issue was referenced by e2ffad7823ca525a7d9e2bc3f35d6ece413371bc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52481
No description provided.